Name:    hakyll-core
Version: 4.12.3.0

Synopsis: A static website compiler library
Description:
  Hakyll is a static website compiler library. It provides you with the tools to
  create a simple or advanced static website using a Haskell DSL and formats
  such as markdown or RST. You can find more information, including a tutorial,
  on the website:

  .

  * <http://jaspervdj.be/hakyll>

  .

  If you seek assistance, there's:

  .

  * A google group: <http://groups.google.com/group/hakyll>

  .

  * An IRC channel, @#hakyll@ on freenode

  .

  Additionally, there's the Haddock documentation in the different modules,
  meant as a reference.

Author:       Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:   Jasper Van der Jeugt <m@jaspervdj.be>
Homepage:     http://jaspervdj.be/hakyll
Bug-Reports:  http://github.com/jaspervdj/Hakyll/issues
License:      BSD3
License-File: LICENSE
Category:     Web

Cabal-Version: >= 1.10
Build-Type:    Simple

Extra-source-files:
  CHANGELOG.md

Source-Repository head
  Type:     git
  Location: git://github.com/jaspervdj/hakyll.git

Library
  Ghc-Options:      -Wall
  Hs-Source-Dirs:   lib
  Default-language: Haskell2010

  Exposed-Modules:
    Hakyll.Core.Compiler
    Hakyll.Core.Compiler.Internal
    Hakyll.Core.Configuration
    Hakyll.Core.Dependencies
    Hakyll.Core.File
    Hakyll.Core.Identifier
    Hakyll.Core.Identifier.Pattern
    Hakyll.Core.Item
    Hakyll.Core.Logger
    Hakyll.Core.Metadata
    Hakyll.Core.Provider
    Hakyll.Core.Provider.Metadata
    Hakyll.Core.Routes
    Hakyll.Core.Rules
    Hakyll.Core.Rules.Internal
    Hakyll.Core.Runtime
    Hakyll.Core.Store
    Hakyll.Core.UnixFilter
    Hakyll.Core.Util.File
    Hakyll.Core.Util.String
    Hakyll.Core.Writable

    Data.List.Extended
    Data.Yaml.Extended
    Hakyll.Core.Compiler.Require
    Hakyll.Core.Identifier.Pattern.Internal
    Hakyll.Core.Item.SomeItem
    Hakyll.Core.Provider.Internal
    Hakyll.Core.Provider.MetadataCache
    Hakyll.Core.Util.Parser

  Build-Depends:
    base                 >= 4.8      && < 5,
    binary               >= 0.5      && < 0.10,
    blaze-html           >= 0.5      && < 0.10,
    blaze-markup         >= 0.5.1    && < 0.9,
    bytestring           >= 0.9      && < 0.11,
    containers           >= 0.3      && < 0.6,
    cryptohash           >= 0.7      && < 0.12,
    data-default         >= 0.4      && < 0.8,
    deepseq              >= 1.3      && < 1.5,
    directory            >= 1.0      && < 1.4,
    filepath             >= 1.0      && < 1.5,
    lrucache             >= 1.1.1    && < 1.3,
    mtl                  >= 1        && < 2.3,
    network-uri          >= 2.6      && < 2.7,
    parsec               >= 3.0      && < 3.2,
    process              >= 1.6      && < 1.7,
    random               >= 1.0      && < 1.2,
    regex-tdfa           >= 1.1      && < 1.3,
    resourcet            >= 1.1      && < 1.3,
    scientific           >= 0.3.4    && < 0.4,
    tagsoup              >= 0.13.1   && < 0.15,
    text                 >= 0.11     && < 1.3,
    time                 >= 1.8      && < 1.10,
    time-locale-compat   >= 0.1      && < 0.2,
    unordered-containers >= 0.2      && < 0.3,
    vector               >= 0.11     && < 0.13,
    yaml                 >= 0.8.11   && < 0.9,
    optparse-applicative >= 0.12     && < 0.15,
    file-embed           >= 0.0.10.1 && < 0.0.11
